--- a/PaFiMac/PaFiMac/Base.lproj/Main.storyboard
+++ b/PaFiMac/PaFiMac/Base.lproj/Main.storyboard
@@ -673,24 +673,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="1088" height="816"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ald-kG-OMd">
-                                <rect key="frame" x="87" y="792" width="113" height="22"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" title="1以上の整数を入力" drawsBackground="YES" id="JIJ-IZ-lHC">
-                                    <numberFormatter key="formatter" formatterBehavior="default10_4" numberStyle="decimal" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="3" id="sn5-aS-ZJ1"/>
-                                    <font key="font" metaFont="system"/>
-                                    <color key="textColor" red="0.48226211029999999" green="0.57652655639999995" blue="0.66436464090000003" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
-                            <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gtb-do-723">
-                                <rect key="frame" x="287" y="791" width="138" height="22"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" title="1以上の整数を入力" drawsBackground="YES" id="Usq-X9-cDs">
-                                    <numberFormatter key="formatter" formatterBehavior="default10_4" numberStyle="decimal" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="3" id="7aS-76-CUb"/>
-                                    <font key="font" metaFont="system"/>
-                                    <color key="textColor" red="0.48226211029999999" green="0.57652655639999995" blue="0.66436464090000003" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lyp-ur-ea1">
                                 <rect key="frame" x="9" y="796" width="71" height="17"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="1枠のサイズ" id="hoz-Id-27e">
@@ -699,9 +681,18 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="abx-vp-jWe">
-                                <rect key="frame" x="11" y="5" width="1057" height="779"/>
-                            </customView>
+                            <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ald-kG-OMd">
+                                <rect key="frame" x="87" y="792" width="113" height="22"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="JIJ-IZ-lHC">
+                                    <numberFormatter key="formatter" formatterBehavior="default10_4" numberStyle="decimal" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="3" id="sn5-aS-ZJ1">
+                                        <real key="minimum" value="9.9999999999999995e-07"/>
+                                        <real key="maximum" value="1000"/>
+                                    </numberFormatter>
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" red="0.48226211029999999" green="0.57652655639999995" blue="0.66436464090000003" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Anu-8M-3tT">
                                 <rect key="frame" x="223" y="794" width="53" height="17"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="転換枠数" id="OqV-ku-t42">
@@ -710,8 +701,27 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
+                            <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gtb-do-723">
+                                <rect key="frame" x="287" y="791" width="138" height="22"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="Usq-X9-cDs">
+                                    <numberFormatter key="formatter" formatterBehavior="default10_4" numberStyle="decimal" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="3" id="7aS-76-CUb">
+                                        <real key="minimum" value="1"/>
+                                        <real key="maximum" value="100"/>
+                                    </numberFormatter>
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" red="0.48226211029999999" green="0.57652655639999995" blue="0.66436464090000003" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <customView identifier="graphView" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="abx-vp-jWe" customClass="GraphView">
+                                <rect key="frame" x="11" y="5" width="1057" height="779"/>
+                            </customView>
                         </subviews>
                     </view>
+                    <connections>
+                        <outlet property="myBoxSize" destination="Ald-kG-OMd" id="BVb-Tb-2BA"/>
+                        <outlet property="myReversalAmount" destination="Gtb-do-723" id="LZf-dm-DYo"/>
+                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
