--- a/PaFiMac/PaFiMac/Base.lproj/Main.storyboard
+++ b/PaFiMac/PaFiMac/Base.lproj/Main.storyboard
@@ -683,8 +683,8 @@
                             </textField>
                             <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ald-kG-OMd">
                                 <rect key="frame" x="87" y="792" width="113" height="22"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" title="0.002" drawsBackground="YES" id="JIJ-IZ-lHC">
-                                    <numberFormatter key="formatter" formatterBehavior="default10_4" numberStyle="decimal" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="3" id="sn5-aS-ZJ1">
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" title="0.0001" drawsBackground="YES" id="JIJ-IZ-lHC">
+                                    <numberFormatter key="formatter" formatterBehavior="custom10_4" positiveFormat="####.#####" negativeFormat="-####.#####" numberStyle="decimal" usesGroupingSeparator="NO" groupingSize="0" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="5" id="sn5-aS-ZJ1">
                                         <real key="minimum" value="9.9999999999999995e-07"/>
                                         <real key="maximum" value="1000"/>
                                     </numberFormatter>
@@ -716,7 +716,7 @@
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <customView identifier="graphView" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="abx-vp-jWe" customClass="PaFiEngineView">
+                            <customView identifier="PaFiEngineView" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="abx-vp-jWe" customClass="PaFiEngineView">
                                 <rect key="frame" x="11" y="5" width="1057" height="779"/>
                             </customView>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LxZ-XE-rzd">
